test/test_11813225_4.out
Error type 1 at Line 4: a variable is used without a definition
Error type 1 at Line 4: a variable is used without a definition
Error type 1 at Line 8: a variable is used without a definition
Error type 1 at Line 8: a variable is used without a definition
Error type 8 at Line 10: a function’s return value type mismatches the declared type
