test/test_11813225_4.spl
int this_is_test()
{
  int xx;
  if (a>b)
  {
    return -1;
  }
  if (c==d)
  {
    return 1.1;
  }
}